@@ -8,7 +8,11 @@
 #define CDEF(name)  {#name, (DL_FUNC) &name, sizeof(name ## _t)/sizeof(name ## _t[0]), name ##_t}
 
 
-static R_NativePrimitiveArgType clara_t[33] = {
+static R_NativePrimitiveArgType R_bncoef_t[3] = {
+    INTSXP, REALSXP, REALSXP
+};
+
+static R_NativePrimitiveArgType cl_clara_t[33] = {
     /*n:*/ INTSXP, INTSXP, INTSXP, REALSXP, INTSXP, INTSXP, REALSXP, INTSXP,
     /*valmd:*/ REALSXP, INTSXP, INTSXP, /* rng_R: */ LGLSXP, /* pam_like:*/ LGLSXP,
     /*nrepr: */ INTSXP, INTSXP, INTSXP, INTSXP, INTSXP,
@@ -17,7 +21,7 @@ static R_NativePrimitiveArgType clara_t[33] = {
     /*tmp: */ REALSXP,INTSXP
 };
 
-static R_NativePrimitiveArgType fanny_t[29] = {
+static R_NativePrimitiveArgType cl_fanny_t[27] = {
     INTSXP, INTSXP, INTSXP, REALSXP, REALSXP,
     /*jdyss: */ INTSXP, REALSXP, INTSXP,  INTSXP, INTSXP, INTSXP,
     /*negbr: */ INTSXP, /*syl: */ REALSXP, REALSXP, REALSXP, REALSXP,
@@ -25,14 +29,14 @@ static R_NativePrimitiveArgType fanny_t[29] = {
     /*obj: */ REALSXP, INTSXP, REALSXP, REALSXP, REALSXP, INTSXP
 };
 
-static R_NativePrimitiveArgType pam_t[23] = {
+static R_NativePrimitiveArgType cl_pam_t[23] = {
     INTSXP, INTSXP, INTSXP, REALSXP, REALSXP,
     /*jdyss: */ INTSXP, REALSXP, INTSXP,  INTSXP, INTSXP,
     /*nrepr: */ LGLSXP, INTSXP, /*radus: */ REALSXP, REALSXP, REALSXP, REALSXP,
     /*ttsyl: */ REALSXP, REALSXP, INTSXP, INTSXP,  REALSXP, REALSXP, INTSXP
 };
 
-static R_NativePrimitiveArgType spannel_t[12] = {
+static R_NativePrimitiveArgType spannel_t[12] = { // ./spannel.c :
     INTSXP, INTSXP, REALSXP, REALSXP, REALSXP, REALSXP,
     /*varss: */ REALSXP, REALSXP, REALSXP, REALSXP, INTSXP, INTSXP
 };
@@ -51,20 +55,20 @@ static R_NativePrimitiveArgType twins_t[17] = {
 };
 
 /* is only .C()-called from ../tests/sweep-ex.R : */
-static R_NativePrimitiveArgType sweep_t[5] = {
+static R_NativePrimitiveArgType cl_sweep_t[5] = {
     REALSXP, INTSXP, INTSXP, INTSXP, REALSXP
 };
 
 static const R_CMethodDef CEntries[]  = {
-    {"cl_clara", (DL_FUNC) &cl_clara, 33, clara_t},
+    CDEF(R_bncoef),
+    CDEF(cl_clara),
     {"dysta3", (DL_FUNC) &dysta3, 8},/* ./fanny.c */
-    {"cl_fanny", (DL_FUNC) &cl_fanny, 27, fanny_t},
-    {"cl_pam", (DL_FUNC) &cl_pam, 23, pam_t},
-    // ./spannel.c :
-    {"spannel", (DL_FUNC) &spannel, 12, spannel_t},
-    {"cl_sweep", (DL_FUNC) &cl_sweep, 5, sweep_t},
+    CDEF(cl_fanny),
+    CDEF(cl_pam),
+    CDEF(spannel),
+    CDEF(cl_sweep),
     CDEF(sildist),
-    {"twins", (DL_FUNC) &twins, 17, twins_t},
+    CDEF(twins),
     {NULL, NULL, 0}
 };
 
@@ -74,7 +78,6 @@ static const R_CMethodDef CEntries[]  = {
  */
 
 static R_FortranMethodDef FortEntries[] = {
-    {"bncoef", (DL_FUNC) &F77_SUB(bncoef), 3},/* ./twins.f */
     {"cl_daisy", (DL_FUNC) &F77_SUB(cldaisy), 11},
     {"cl_mona", (DL_FUNC) &F77_SUB(clmona), 9},
     {"dysta", (DL_FUNC) &F77_SUB(dysta), 8},
